--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,5 @@ body {
     margin: 0;
     background: pink;
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
