--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,346 @@
-body {
+* {
     margin: 0;
-    background: pink;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: rgb(237, 249, 254);
+    font-family: 'Poppins', sans-serif;
+    
+}
+
+footer {
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 1.5rem 0rem 1.5rem 0rem;
+}
+
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    height: 10vh;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 10vh;
+    background-color: rgb(237, 249, 254);
+    
+}
+
+.logo {
+    color: #222222;
+    font-size: 1.8rem;
+    text-decoration: none;
+    font-weight: 600;
+    margin-top: 5px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.nav-links {
+    display: flex;
+    width: 40%;
+    justify-content: space-around;
+    color: #222222;
+
+}
+
+.nav-links li{
+    list-style: none;
+}
+
+.nav-links a {
+    color: black;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 2px;
+    background-color: black;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+.greetings {
+    display: flex;
+    padding: 5rem 0rem 5rem 0rem;
+    
+}
+
+.greetings-text {
+    flex: 1 1;
+    padding: 0rem 5rem 0rem 10rem;
+    text-align: left;
+    width: 70%;
+}
+
+.greetings-text h1 {
+    font-size: 4rem;
+    padding: 0rem 0rem 1.5rem 0rem;
+    letter-spacing: 3px;
+    font-family: 'Oswald', sans-serif;
+    color: #222222;
+}
+
+.greetings-text h2 {
+    font-size: 1.8rem;
+    color: #333333;
+    padding: 0rem 0rem 0rem 2rem;
+}
+
+.greetings-text p {
+    font-size: 1.5rem;
+    padding: 1.5rem 0rem 1.5rem 0rem;
+    line-height: 2;
+    color: #222222;
+    font-style: italic;
+}
+
+.social-media a {
+    padding: 0rem 1rem 0rem 1rem;
+    cursor: pointer;
+}
+
+.grid-container {
+    width: 30%;
+    padding: 0rem 10rem 0rem 5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+}
+
+.greetings-animation {
+    margin: auto;
+}
+
+.fastLearner {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.diy {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.myFace {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.codeWriter {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.animation-brains {
+    width: 150px;
+    height: 150px;
+    background: #F5A65B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.animation-tinker {
+    width: 150px;
+    height: 150px;
+    background: #BBD1EA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.animation-coder {
+    width: 150px;
+    height: 150px;
+    background: #7BD389;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects {
+    height: 1024px;
+    padding: 0rem 0rem 0rem 10rem;
+    text-align: left;
+}
+
+.contact {
+    height: 1024px;
+    padding: 0rem 0rem 0rem 10rem;
+    text-align: left;
+}
+
+@media screen and (max-width:768px) {
+
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 100vh;
+        top: 6vh;
+        background: rgb(237, 249, 254);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        
+    }
+
+   h2 {
+       font-size: 1rem;
+   }
+    
+    .nav-links li{
+        opacity: 0;
+    }
+    .burger {
+        display: block;
+    }
+
+    .nav-active {
+        transform: translateX(0%);
+        transition: all 1s ease-out;
+    }
+
+    .greetings {
+        display: block;
+        padding: 2rem 0rem 2rem 0rem;
+    }
+
+    .greetings-text {
+        width: 100%;
+        padding: 0rem 1rem 2rem 1rem;
+    }
+
+    .greetings-text h1 {
+        font-size: 2.3rem;
+        padding: 0rem 0rem 1rem 0rem;
+    }
+
+    .greetings-text h2 {
+        font-size: 1.5rem;
+    }
+
+    .greetings-text p {
+        font-size: 1rem;
+    }
+
+    .grid-container {
+        padding: 0rem 1rem 2rem 1rem;
+        width: 100%;
+        grid-template-columns: 0fr 0fr;
+        justify-content: center;
+
+    }
+
+    .greetings-desc {
+        margin: auto;
+    }
+
+    .animation-pic {
+        width: 100px;
+        height: 100px;
+    }
+
+    .animation-pic img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .animation-brains {
+        width: 100px;
+        height: 100px;
+    }
+
+    .animation-coder {
+        width: 100px;
+        height: 100px;
+    }
+
+    .animation-tinker {
+        width: 100px;
+        height: 100px;
+    }
+
+    .animation-brains img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .animation-coder img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .animation-tinker img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .fastLearner {
+        height: 100px;
+        
+    }
+    
+    .diy {
+        height: 100px;
+        
+    }
+    
+    .myFace {
+        height: 100px;
+        
+    }
+    
+    .codeWriter {
+        height: 100px;
+        
+    }
+    
+    
+}
+
+@keyframes navLinkFade {
+    from{   
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+    
+}
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-4px, 6px);
+}
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-4px, -6px);
 }
