--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,14 @@ nav {
     margin: auto;
 }
 
-.square-txt {
+.fastLearner {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.diy {
     width: 200px;
     height: 150px;
     display: flex;
@@ -134,6 +141,13 @@ nav {
 }
 
 .myFace {
+    width: 200px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.codeWriter {
     width: 200px;
     height: 150px;
     display: flex;
