--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     
 }
 
-footer {
+footer p {
     text-align: center;
     padding: 1.5rem 0rem 1.5rem 0rem;
 }
@@ -29,9 +29,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 10vh;
-    background-color: rgb(237, 249, 254);
-    
+    height: 15vh;
 }
 
 .logo {
@@ -51,7 +49,7 @@ nav {
 
 }
 
-.nav-links li{
+.nav-links li {
     list-style: none;
 }
 
@@ -122,32 +120,7 @@ nav {
     grid-gap: 2rem;
 }
 
-.greetings-animation {
-    margin: auto;
-}
-
-.fastLearner {
-    width: 200px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-}
-
-.diy {
-    width: 200px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-}
-
-.myFace {
-    width: 200px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-}
-
-.codeWriter {
+.fastLearner, .diy, .codeWriter {
     width: 200px;
     height: 150px;
     display: flex;
@@ -192,10 +165,15 @@ nav {
    h2 {
        font-size: 1rem;
    }
+
+   footer p {
+    font-size: 0.75rem;
+   }
     
     .nav-links li{
         opacity: 0;
     }
+    
     .burger {
         display: block;
     }
@@ -221,7 +199,7 @@ nav {
     }
 
     .greetings-text h2 {
-        font-size: 1.5rem;
+        font-size: 1.25rem
     }
 
     .greetings-text p {
@@ -242,51 +220,14 @@ nav {
         height: 100px;
     }
 
-    .animation-pic {
-        width: 100px;
-        height: 100px;
-    }
-
-    .animation-pic img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .animation-brains img {
+    .animation-brains img, .animation-coder img, .animation-tinker img {
         width: 70px;
         height: 70px;
     }
 
-    .animation-coder img {
-        width: 70px;
-        height: 70px;
-    }
-
-    .animation-tinker img {
-        width: 70px;
-        height: 70px;
-    }
-
-    .fastLearner {
+    .fastLearner, .diy, .codeWriter {
         height: 100px;
-        
     }
-    
-    .diy {
-        height: 100px;
-        
-    }
-    
-    .myFace {
-        height: 100px;
-        
-    }
-    
-    .codeWriter {
-        height: 100px;
-        
-    }
-    
     
 }
 
